syntax = "proto3";

package protoBenchmark;

option java_package = "protobufBenchmark";
option java_outer_classname = "data";

message MixedData {
    string f1 = 1;
    double f2 = 2;
    uint64 f3 = 3;
    uint32 f4 = 4;
    string f5 = 5;
    double f6 = 6;
    uint64 f7 = 7;
    uint32 f8 = 8;
    uint32 f9 = 9;
    uint64 f10 = 10;
    double f11 = 11;
    double f12 = 12;
    string f13 = 13;
    string f14 = 14;
    uint64 f15 = 15;
    uint32 f16 = 16;
    uint32 f17 = 17;
    string f18 = 18;
    string f19 = 19;
    string f20 = 20;
}

message OnlyStrings {
    string f1 = 1;
    string f2 = 2;
    string f3 = 3;
    string f4 = 4;
    string f5 = 5;
    string f6 = 6;
    string f7 = 7;
    string f8 = 8;
    string f9 = 9;
    string f10 = 10;
    string f11 = 11;
    string f12 = 12;
    string f13 = 13;
    string f14 = 14;
    string f15 = 15;
    string f16 = 16;
    string f17 = 17;
    string f18 = 18;
    string f19 = 19;
    string f20 = 20;
}

message OnlyLongs {
    uint64 f1 = 1;
    uint64 f2 = 2;
    uint64 f3 = 3;
    uint64 f4 = 4;
    uint64 f5 = 5;
    uint64 f6 = 6;
    uint64 f7 = 7;
    uint64 f8 = 8;
    uint64 f9 = 9;
    uint64 f10 = 10;
    uint64 f11 = 11;
    uint64 f12 = 12;
    uint64 f13 = 13;
    uint64 f14 = 14;
    uint64 f15 = 15;
    uint64 f16 = 16;
    uint64 f17 = 17;
    uint64 f18 = 18;
    uint64 f19 = 19;
    uint64 f20 = 20;
}